# libobi

./: .gitignore  .gitmodules  CHANGELOG.md  NOTICE  README.md  meson.build  meson_options.txt
providers/: meson.build
providers/asset_meshio_cgltf_fastobj/: meson.build  obi_provider_asset_meshio_cgltf_fastobj_v0.c
providers/asset_meshio_ufbx/: meson.build  obi_provider_asset_meshio_ufbx_v0.c
providers/asset_native/: meson.build  obi_provider_asset_native_v0.c
providers/core_glib/: meson.build  obi_provider_core_cancel_glib_v0.c  obi_provider_core_pump_glib_v0.c  obi_provider_core_waitset_glib_v0.c
providers/core_native/: meson.build  obi_provider_core_cancel_atomic_v0.c  obi_provider_core_pump_libuv_v0.c  obi_provider_core_waitset_libevent_v0.c  obi_provider_core_waitset_libuv_v0.c
providers/crypto_native/: meson.build  obi_provider_crypto_native_v0.c
providers/crypto_openssl/: meson.build  obi_provider_crypto_openssl_v0.c
providers/crypto_sodium/: meson.build  obi_provider_crypto_sodium_v0.c
providers/data_archive_libarchive/: meson.build  obi_provider_data_archive_libarchive_v0.c
providers/data_archive_libzip/: meson.build  obi_provider_data_archive_libzip_v0.c
providers/data_compression_libdeflate/: meson.build  obi_provider_data_compression_libdeflate_v0.c
providers/data_compression_zlib/: meson.build  obi_provider_data_compression_zlib_v0.c
providers/data_gio/: meson.build  obi_provider_data_gio_v0.c
providers/data_magic/: meson.build  obi_provider_data_magic_v0.c
providers/data_native/: meson.build  obi_provider_data_native_v0.c
providers/data_serde_jansson/: meson.build  obi_provider_data_serde_jansson_v0.c
providers/data_serde_jsmn/: meson.build  obi_provider_data_serde_jsmn_v0.c
providers/data_serde_yyjson/: meson.build  obi_provider_data_serde_yyjson_v0.c
providers/data_uri_glib/: meson.build  obi_provider_data_uri_glib_v0.c
providers/data_uri_uriparser/: meson.build  obi_provider_data_uri_uriparser_v0.c
providers/db_kv_lmdb/: meson.build  obi_provider_db_kv_lmdb_v0.c
providers/db_kv_sqlite/: meson.build  obi_provider_db_kv_sqlite_v0.c
providers/db_native/: meson.build  obi_provider_db_native_v0.c
providers/db_sql_postgres/: meson.build  obi_provider_db_sql_postgres_v0.c
providers/db_sql_sqlite/: meson.build  obi_provider_db_sql_sqlite_v0.c
providers/doc_inspect_gio/: meson.build  obi_provider_doc_inspect_gio_v0.c
providers/doc_inspect_magic/: meson.build  obi_provider_doc_inspect_magic_v0.c
providers/doc_markup_expat/: meson.build  obi_provider_doc_markup_expat_v0.c
providers/doc_markup_libxml2/: meson.build  obi_provider_doc_markup_libxml2_v0.c
providers/doc_md_cmark/: meson.build  obi_provider_doc_md_cmark_v0.c
providers/doc_md_md4c/: meson.build  obi_provider_doc_md_md4c_v0.c
providers/doc_native/: meson.build  obi_provider_doc_native_v0.c
providers/doc_paged_mupdf/: meson.build  obi_provider_doc_paged_mupdf_v0.c
providers/doc_paged_poppler/: meson.build  obi_provider_doc_paged_poppler_v0.c
providers/doc_textdecode_iconv/: meson.build  obi_provider_doc_textdecode_iconv_v0.c
providers/doc_textdecode_icu/: meson.build  obi_provider_doc_textdecode_icu_v0.c
providers/gfx_gpu_sokol/: meson.build  obi_provider_gfx_gpu_sokol_v0.c
providers/gfx_raylib/: meson.build  obi_provider_gfx_raylib_v0.c
providers/gfx_render3d_raylib/: meson.build  obi_provider_gfx_render3d_raylib_v0.c
providers/gfx_render3d_sokol/: meson.build  obi_provider_gfx_render3d_sokol_v0.c
providers/gfx_sdl3/: meson.build  obi_provider_gfx_sdl3_v0.c
providers/hw_gpio_libgpiod/: meson.build  obi_provider_hw_gpio_libgpiod_v0.c
providers/hw_gpio_native/: meson.build  obi_provider_hw_gpio_native_v0.c
providers/ipc_bus_dbus1/: meson.build  obi_provider_ipc_bus_dbus1_v0.c
providers/ipc_bus_sdbus/: meson.build  obi_provider_ipc_bus_sdbus_v0.c
providers/math_bigfloat_libbf/: meson.build  obi_provider_math_bigfloat_libbf_v0.c
providers/math_bigfloat_mpfr/: meson.build  obi_provider_math_bigfloat_mpfr_v0.c
providers/math_bigint_gmp/: meson.build  obi_provider_math_bigint_gmp_v0.c
providers/math_bigint_libtommath/: meson.build  obi_provider_math_bigint_libtommath_v0.c
providers/math_blas_blis/: meson.build  obi_provider_math_blas_blis_v0.c
providers/math_blas_openblas/: meson.build  obi_provider_math_blas_openblas_v0.c
providers/math_decimal_decnumber/: meson.build  obi_provider_math_decimal_decnumber_v0.c
providers/math_decimal_mpdecimal/: meson.build  obi_provider_math_decimal_mpdecimal_v0.c
providers/math_native/: meson.build  obi_provider_math_native_v0.c
providers/math_science_openlibm/: meson.build  obi_provider_math_science_openlibm_v0.c
providers/media_audio_miniaudio/: meson.build  obi_provider_media_audio_miniaudio_v0.c
providers/media_audio_openal/: meson.build  obi_provider_media_audio_openal_v0.c
providers/media_audio_portaudio/: meson.build  obi_provider_media_audio_portaudio_v0.c
providers/media_audio_resample_libsamplerate/: meson.build  obi_provider_media_audio_resample_libsamplerate_v0.c
providers/media_audio_resample_speexdsp/: meson.build  obi_provider_media_audio_resample_speexdsp_v0.c
providers/media_audio_sdl3/: meson.build  obi_provider_media_audio_sdl3_v0.c
providers/media_audio_sdlmixer12/: meson.build  obi_provider_media_audio_sdlmixer12_v0.c
providers/media_ffmpeg/: meson.build  obi_provider_media_ffmpeg_v0.c
providers/media_gdkpixbuf/: meson.build  obi_provider_media_gdkpixbuf_v0.c
providers/media_gstreamer/: meson.build  obi_provider_media_gstreamer_v0.c
providers/media_image/: meson.build  obi_provider_media_image_v0.c
providers/media_native/: meson.build  obi_provider_media_native_v0.c
providers/media_scale_ffmpeg/: meson.build  obi_provider_media_scale_ffmpeg_v0.c
providers/media_scale_libyuv/: meson.build  obi_provider_media_scale_libyuv_v0.c
providers/media_stb/: meson.build  obi_provider_media_stb_v0.c
providers/net_dns_cares/: meson.build  obi_provider_net_dns_cares_v0.c
providers/net_dns_ldns/: meson.build  obi_provider_net_dns_ldns_v0.c
(+97 files in other folders)
